# etcminer

./: .bumpversion.cfg  .clang-format  .dockerignore  .gitattributes  CMakeLists.txt  Dockerfile  README.md  copy  cp2miner  docker-readme.md  linuxrelease  test  test.conf  test.config  winrelease.bat
.circleci/: circleci.yml  config.yml
.github/workflows/: stale.yml
cmake/: EthCompilerSettings.cmake
cmake/Hunter/: config.cmake
cmake/cable/toolchains/: cxx17.cmake
docs/: API_DOCUMENTATION.md  BUILD.md  Options.md  POOL_EXAMPLES_ETH.md
etcminer/: CMakeLists.txt  DBusInt.h  etcminer.rc  main.cpp
ethash/: CMakeLists.txt
ethash/include/ethash/: ethash.h  ethash.hpp
ethash/lib/ethash/: CMakeLists.txt  ethash-internal.hpp  ethash.cpp
ethash/lib/keccak/: CMakeLists.txt
ethminer/: main.cpp
libapi/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
libcl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libcl/kernels/: CMakeLists.txt  Makefile
libcl/kernels/cl/: ethash.cl
libcl/kernels/isa/: GCN3_ethash_search.isa  GCN5_ethash_search.isa
libcpu/: CMakeLists.txt  CPUMiner.cpp  CPUMiner.h
libcuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  cuda_helper.h  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h  fnv.cuh  keccak.cuh
libdev/: CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Log.cpp  Log.h  Terminal.h  Worker.cpp  Worker.h  vector_ref.h
libdevcore/: CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Log.cpp  Log.h  Worker.cpp  Worker.h  vector_ref.h
libeth/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
libethash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libethash-cl/CL/: cl2.hpp  opencl.hpp
libethash-cl/kernels/: README.md
libethash-cl/kernels/cl/: ethash.cl
libethash-cl/kernels/isa/: GCN_ethash.isa
libethash-cpu/: CPUMiner.cpp  CPUMiner.h
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  cuda_helper.h  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h
libethcore/: EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
libhwmon/: CMakeLists.txt  wrapadl.cpp  wrapadl.h  wrapamdsysfs.cpp  wrapamdsysfs.h  wraphelper.cpp  wraphelper.h  wrapnvml.cpp  wrapnvml.h
libpool/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpool/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpool/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpool/testing/: SimulateClient.cpp  SimulateClient.h
libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
nsfminer/: CMakeLists.txt  DBusInt.h  main.cpp  nsfminer.rc
